# desktop-icon-manager

./: Cargo.toml  README.md  build.sh  install-icons.sh
src/: icon_data.rs  main.rs
